# dotfiles-common

./: .chezmoi.toml.tmpl  .chezmoidata.yaml  .chezmoiignore  .gitignore  CHANGELOG.md  README.md  cli  cli.ps1  dot_bash_alias  dot_bash_profile.tmpl  dot_bashrc  dot_wezterm.lua  manifest.yaml  run_onchange_after_enable-chezmoi-update-timer.sh.tmpl
.chezmoidata/: agents.yaml
.chezmoiscripts/: run_after_60-deploy-ai-agents.sh  run_after_60-deploy-ai-agents.sh.tmpl  run_once_after_60-setup-symlinks.ps1.tmpl  run_once_after_70-install-claude-plugins.sh.tmpl  run_onchange_after_install-mcp.sh.tmpl
.claude/: CLAUDE.md
docs/: overlay-convention.md
dot_claude/: CLAUDE.md
python/: .gitignore  README.md  noxfile.py  pyproject.toml
python/src/acap_dotfiles/: __init__.py  cli.py
python/src/acap_dotfiles/commands/: __init__.py  apply.py  backup.py  doctor.py  host.py  manifest.py  migrate.py  release.py  restore.py  ssh.py  status.py  update.py
python/src/acap_dotfiles/core/: chezmoi.py  config.py  git.py  inventory.py  manifest.py  role.py
python/src/acap_dotfiles/io/: exec.py  log.py
python/tests/: conftest.py
python/tests/integration/: Dockerfile.test  conftest.py  test_apply_golden.py
python/tests/unit/: test_apply.py  test_backup.py  test_chezmoi_wrapper.py  test_config.py  test_doctor.py  test_exec.py  test_git.py  test_host.py  test_inventory.py  test_log.py  test_manifest.py  test_migrate.py  test_no_direct_subprocess.py  test_plugin_discovery.py  test_release.py  test_restore.py  test_role.py  test_ssh.py  test_status.py  test_update.py
(+128 files in other folders)
