[project]
name = "acap-dotfiles-cli"
description = "Unified cross-platform CLI for the dotfiles-common chezmoi-managed dotfiles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peter Lee", email = "10173354+mrpeterlee@users.noreply.github.com" }]
version = "0.1.0"
dependencies = [
    "click>=8.1,<9.0",
    "pydantic-settings>=2.6,<3.0",
    "structlog>=24.0,<26.0",
    "tomli-w>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
]

[project.scripts]
dots = "acap_dotfiles.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-subprocess>=1.5,<2.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-PyYAML",
    "nox>=2024.10,<2026",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "acap_dotfiles"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/acap_dotfiles/core", "src/acap_dotfiles/io"]
# commands/ relaxed because Click decorators force Any
exclude = ["src/acap_dotfiles/commands/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["integration: requires Docker"]
